--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./function/higherOrderAndCallBackFun.js"></script>
+    <script src="./output_types.js"></script>
 </body>
 
 </html>
