--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./closure.js"></script>
+    <script src="./loops/find_len_str.js"></script>
 </body>
 
 </html>
