27-9-24 methods of arrays (push, pop, shift, unshift, indexOf, at, slice, splice)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./loops/find_len_str.js"></script>
+    <script src="./objects/call_statement.js"></script>
 </body>
 
 </html>
