--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./objects/call_statement.js"></script>
+    <script src="./prototype.js"></script>
 </body>
 
 </html>
